--- a/01_midi_drums/01_midi_drums.ipynb
+++ b/01_midi_drums/01_midi_drums.ipynb
@@ -2759,9 +2759,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "musikinformatik_sose2021",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "musikinformatik_sose2021"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
