fix download error

--- a/01_midi_drums/01_midi_drums.ipynb
+++ b/01_midi_drums/01_midi_drums.ipynb
@@ -98,7 +98,7 @@
     "            print(f\"{dl_name} already downloaded to {dl['path']}\")\n",
     "            continue\n",
     "        print(f\"Start downloading {dl_name} to {dl['path']} - this can take multiple minutes!\")\n",
-    "        urllib.request.urlretrieve(dl_url, dl_path)\n",
+    "        urllib.request.urlretrieve(dl['url'], dl_path)\n",
     "        print(f\"Finished downloading\")\n",
     "    \n",
     "    if not os.path.isdir(archive_dir):\n",
