added review changes

--- a/00_basics/sc_dimensions.ipynb
+++ b/00_basics/sc_dimensions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "atlantic-compilation",
+   "id": "eligible-assault",
    "metadata": {},
    "source": [
     "# Dimensionality in SuperCollider\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "southwest-panel",
+   "id": "second-maldives",
    "metadata": {},
    "source": [
     "## From scalar to vector to matrix\n",
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "sporting-pixel",
+   "id": "isolated-sponsorship",
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "african-trigger",
+   "id": "guilty-formula",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "abandoned-artist",
+   "id": "similar-religious",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "differential-appraisal",
+   "id": "native-mathematics",
    "metadata": {},
    "source": [
     "When working with rational numbers we must take into accont that a computer is [bound to a limited representation of our number](https://en.wikipedia.org/wiki/Single-precision_floating-point_format) which leads sometimes to unexpected results."
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "global-benjamin",
+   "id": "entire-circle",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "joined-logic",
+   "id": "understood-password",
    "metadata": {},
    "source": [
     "Althogh $\\left \\lfloor \\frac{0.7}{0.1} \\right \\rfloor = \\lfloor 7 \\rfloor = 7$, where $\\lfloor x \\rfloor$ is the [flooring](https://en.wikipedia.org/wiki/Floor_and_ceiling_functions) operator on the variable $x$, SuperCollider decides to return a 6 instead which is caused by the limited floating point precission."
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aerial-emperor",
+   "id": "worse-exercise",
    "metadata": {},
    "source": [
     "### Vector\n",
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "convenient-equity",
+   "id": "found-trace",
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "governmental-watch",
+   "id": "prerequisite-hebrew",
    "metadata": {},
    "source": [
     "We can scale each element of our array with a scalar by multiplying a scalar with our array `v`."
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "alpha-extent",
+   "id": "classified-indiana",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "interested-variety",
+   "id": "purple-nerve",
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "manual-valuable",
+   "id": "numerous-genetics",
    "metadata": {},
    "source": [
     "We can also multiply the array with another array."
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "advance-wesley",
+   "id": "incomplete-provision",
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "electoral-eagle",
+   "id": "nominated-violation",
    "metadata": {},
    "source": [
     "Lets see what happens when we multiply non-matching dimensions of our arrays."
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "humanitarian-robin",
+   "id": "electric-volunteer",
    "metadata": {},
    "outputs": [
     {
@@ -242,17 +242,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "considerable-might",
+   "id": "excited-california",
    "metadata": {},
    "source": [
-    "A bit unexpecting that we do not receive an error - instead SuperCollider tries to fix our error here by cycling the smaller array until we have gone through all arrays once fully.\n",
+    "A bit unexpecting that we do not receive an error - SuperCollider expands arrays in such operations to the longest array and cycles through the shorter ones. This allows for very concise code, but you have to take care about the input arrays yourself.\n",
     "Lets see how this cascades when we want to multiply 3 arrays with different size."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "analyzed-violin",
+   "id": "tender-footwear",
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "addressed-warrant",
+   "id": "senior-purse",
    "metadata": {},
    "source": [
     "The results are calculated as following:\n",
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "entertaining-appliance",
+   "id": "diagnostic-overall",
    "metadata": {},
    "source": [
     "### Matrix\n",
@@ -297,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "biological-paper",
+   "id": "intellectual-assurance",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sorted-testing",
+   "id": "desirable-platform",
    "metadata": {},
    "source": [
     "So it is basically just an array of arrays - but lets take a closer look at this as it is important to get the indices and the dimensions properly when working with matrices.\n",
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "metric-glance",
+   "id": "cooked-beijing",
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "powerful-cartridge",
+   "id": "determined-metadata",
    "metadata": {},
    "source": [
     "We see that the first dimension in a SuperCollider array are the rows, the 2nd dimension (the content of the arrays) are the columns - this fits nicely with our mathematical notation.\n",
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "exposed-tribute",
+   "id": "parallel-shanghai",
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "talented-batman",
+   "id": "sexual-gasoline",
    "metadata": {},
    "source": [
     "The multiplication of a matrix with a scalar."
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "empirical-feature",
+   "id": "rubber-soviet",
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "loving-marijuana",
+   "id": "valuable-animation",
    "metadata": {},
    "source": [
     "The multiplication of our a matrices with vectors."
@@ -423,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "related-lecture",
+   "id": "serial-miniature",
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "everyday-kitty",
+   "id": "permanent-atlas",
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "heavy-weekly",
+   "id": "unique-iraqi",
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "protected-token",
+   "id": "recreational-patio",
    "metadata": {},
    "source": [
     "Although the dimensions are matching with our mathematical definition the results do not match up."
@@ -484,18 +484,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "annual-treasurer",
+   "id": "behavioral-original",
    "metadata": {},
    "source": [
     "### Sets\n",
     "\n",
-    "The way to declare a set in SuperCollider is straight forward."
+    "The way to declare a set in SuperCollider is straightforward."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "modern-briefs",
+   "id": "black-literacy",
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "upset-diary",
+   "id": "empty-rebate",
    "metadata": {},
    "source": [
     "Notice that although we declared duplicates in the set this duplication is ignored by SuperCollider as a set can only have unique elements.\n",
@@ -523,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "intimate-congress",
+   "id": "innovative-tomorrow",
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hawaiian-poverty",
+   "id": "simplified-kingdom",
    "metadata": {},
    "source": [
     "Note also that due the circumstance that a set has no order we can also not access the *i*-th element of a set."
@@ -549,7 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "generic-consensus",
+   "id": "seeing-restoration",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "blocked-weight",
+   "id": "respected-gasoline",
    "metadata": {},
    "source": [
     "## Working with matrices\n",
@@ -603,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "gothic-thong",
+   "id": "purple-syracuse",
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +618,7 @@
     "~matrixMul = {|a, b|\n",
     "    if(a[0].size == b.size, {\n",
     "        a.collect({|d, i|\n",
-    "            (b.collect({|z| z}) * d).sum;\n",
+    "            (b * d).sum;\n",
     "        });\n",
     "    }, {\n",
     "        \"error\".postln;\n",
@@ -629,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "mobile-cycle",
+   "id": "atomic-criticism",
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dental-stranger",
+   "id": "higher-michigan",
    "metadata": {},
    "source": [
     "We want to use this function to calculate downmixes.\n",
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "incomplete-billion",
+   "id": "potential-therapist",
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "heated-there",
+   "id": "allied-means",
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sharp-village",
+   "id": "missing-makeup",
    "metadata": {},
    "source": [
     "We stop the audio playback of the SuperCollider server by executing a single dot."
@@ -737,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "violent-genesis",
+   "id": "aboriginal-roots",
    "metadata": {},
    "outputs": [
     {
