--- a/01_midi_drums/01_midi_drums.ipynb
+++ b/01_midi_drums/01_midi_drums.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,15 +62,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "midi already downloaded to ../datasets/lmd/lmd_full.tap.gz\n",
-      "json already downloaded to ../datasets/lmd/md5_to_path.json\n"
+      "Start downloading midi to ../datasets/lmd/lmd_full.tap.gz - this can take multiple minutes!\n"
      ]
     }
    ],
@@ -98,7 +97,7 @@
     "            print(f\"{dl_name} already downloaded to {dl['path']}\")\n",
     "            continue\n",
     "        print(f\"Start downloading {dl_name} to {dl['path']} - this can take multiple minutes!\")\n",
-    "        urllib.request.urlretrieve(dl['url'], dl_path)\n",
+    "        urllib.request.urlretrieve(dl['url'], dl['path'])\n",
     "        print(f\"Finished downloading\")\n",
     "    \n",
     "    if not os.path.isdir(archive_dir):\n",
@@ -3475,7 +3474,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.9"
   }
  },
  "nbformat": 4,
