fix parsing error due to missing library reference

--- a/01_midi_drums/01_midi_drums.ipynb
+++ b/01_midi_drums/01_midi_drums.ipynb
@@ -297,30 +297,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from music21 import converter"
+    "from music21 import converter\n",
+    "import pretty_midi as pm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Selected ../datasets/lmd/lmd_full/d/d3121806fccdc6bbdb727e1685c39bd0.mid as example MIDI file\n"
+      "Selected ../datasets/lmd/lmd_full/5/590d10997010f0af5aed96ce2dd0c2a0.mid as example MIDI file\n"
      ]
     }
    ],
    "source": [
     "example_midi_file = np.random.choice(midi_files)\n",
     "print(f'Selected {example_midi_file} as example MIDI file')\n",
-    "example_stream = converter.parse(example_midi_file)"
+    "example_stream = pm.PrettyMIDI(example_midi_file)"
    ]
   },
   {
