change matrix multiplication function

--- a/00_basics/sc_dimensions.ipynb
+++ b/00_basics/sc_dimensions.ipynb
@@ -558,29 +558,29 @@
      "text": [
       "ERROR: Message 'at' not understood.\n",
       "RECEIVER:\n",
-      "Instance of Set {    (0x7f98d8263488, gc=C0, fmt=00, flg=00, set=02)\n",
+      "Instance of Set {    (0x7ff488b78598, gc=C0, fmt=00, flg=00, set=02)\n",
       "  instance variables [2]\n",
-      "    array : instance of Array (0x7f99101a8108, size=8, set=3)\n",
+      "    array : instance of Array (0x7ff47102d598, size=8, set=3)\n",
       "    size : Integer 3\n",
       "}\n",
       "ARGS:\n",
       "   Integer 0\n",
       "\n",
       "PROTECTED CALL STACK:\n",
-      "\tMeta_MethodError:new\t0x7f99183ac080\n",
+      "\tMeta_MethodError:new\t0x7ff460514080\n",
       "\t\targ this = DoesNotUnderstandError\n",
       "\t\targ what = nil\n",
       "\t\targ receiver = Set[ 3, 2, 1 ]\n",
-      "\tMeta_DoesNotUnderstandError:new\t0x7f99183ae040\n",
+      "\tMeta_DoesNotUnderstandError:new\t0x7ff460516040\n",
       "\t\targ this = DoesNotUnderstandError\n",
       "\t\targ receiver = Set[ 3, 2, 1 ]\n",
       "\t\targ selector = at\n",
       "\t\targ args = [ 0 ]\n",
-      "\tObject:doesNotUnderstand\t0x7f99181fb200\n",
+      "\tObject:doesNotUnderstand\t0x7ff48810b200\n",
       "\t\targ this = Set[ 3, 2, 1 ]\n",
       "\t\targ selector = at\n",
       "\t\targ args = nil\n",
-      "\ta FunctionDef\t0x7f98d80f6a08\n",
+      "\ta FunctionDef\t0x7ff470edbf08\n",
       "\t\tsourceCode = \"{ var result; \\\"**** JUPYTER ****\\\".postln; result = {a[0]}.value(); postf(\\\"-> %\n",
       "\\\", result); \\\"\\\".postln;}\"\n"
      ]
@@ -615,14 +615,11 @@
     }
    ],
    "source": [
-    "~matrixMul = {|a, b|\n",
-    "    if(a[0].size == b.size, {\n",
-    "        a.collect({|d, i|\n",
-    "            (b * d).sum;\n",
-    "        });\n",
-    "    }, {\n",
-    "        \"error\".postln;\n",
-    "    });\n",
+    "~matrixMul = { |a, b|\n",
+    "    if(a[0].size != b.size) { Error(\"matrix dimensions do not match\").throw };\n",
+    "    if(a.every({|i| a[0].size == i.size}).not) {Error(\"input A has non identical dimensions\").throw};\n",
+    "    if(b.every({|i| b[0].size == i.size}).not) {Error(\"input B has non identical dimensions\").throw};\n",
+    "    a.collect { |d| (b * d).sum }\n",
     "};"
    ]
   },
@@ -731,7 +728,7 @@
    "id": "missing-makeup",
    "metadata": {},
    "source": [
-    "We stop the audio playback of the SuperCollider server by executing a single dot."
+    "In Jupyter Notebook, we stop the audio playback of the SuperCollider server by executing a single dot."
    ]
   },
   {
