--- a/01_midi_drums/01_midi_drums.ipynb
+++ b/01_midi_drums/01_midi_drums.ipynb
@@ -4455,7 +4455,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We now filtered half of our available examples by just looking at the metadata of the MIDI files.\n",
+    "We have now filtered half of our available examples, just by looking at the metadata of the MIDI files.\n",
     "The next step is to transform the drum track of each MIDI file into a mathematical representation. \n",
     "\n",
     "The notatation within the MIDI file is bound to time, but in music we often represent the time domain in relation to a tempo which remaps the time measured in seconds.\n",
