--- a/01_midi_drums/01_midi_drums.ipynb
+++ b/01_midi_drums/01_midi_drums.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -169,7 +169,7 @@
        "      dtype='<U63')"
       ]
      },
-     "execution_count": 67,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        "['QUALITY MIDI/EClapton-Promises.mid']"
       ]
      },
-     "execution_count": 69,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
        "<pretty_midi.pretty_midi.PrettyMIDI at 0x159b7d760>"
       ]
      },
-     "execution_count": 71,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
        "189.431068"
       ]
      },
-     "execution_count": 72,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
        "       1.9041068e+01, 1.9441068e+01])"
       ]
      },
-     "execution_count": 73,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
        " array([120.     , 140.00014, 150.     ]))"
       ]
      },
-     "execution_count": 74,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +469,7 @@
        " TimeSignature(numerator=4, denominator=4, time=123.44106800000002)]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
        " Instrument(program=0, is_drum=True, name=\"\")]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +576,7 @@
        " Note(start=13.024401, end=13.131068, pitch=64, velocity=102)]"
       ]
      },
-     "execution_count": 78,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -878,7 +878,7 @@
        " 'proto_path': '../datasets/lmd/proto/ed05335f8f6c273f506a997137b2805b.protobuf'}"
       ]
      },
-     "execution_count": 83,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1291,7 +1291,7 @@
        "136078  ../datasets/lmd/proto/eb59c9f6854d897a03a3ed78...  "
       ]
      },
-     "execution_count": 85,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1341,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1730,7 +1730,7 @@
        "78360   [D/Double Vision.mid, D/Double Vision.mid, D/D...  "
       ]
      },
-     "execution_count": 86,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1758,7 +1758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2147,7 +2147,7 @@
        "108557  [Corrs/The Corrs - Breathless.mid, Various/The...  "
       ]
      },
-     "execution_count": 87,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2158,7 +2158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2201,7 +2201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2222,7 +2222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2252,7 +2252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2517,7 +2517,7 @@
        "[4084 rows x 12 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2537,7 +2537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2558,7 +2558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2588,7 +2588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2867,7 +2867,7 @@
        "29071   [Christian/Inmyhart.mid, Various Artists/inmyh...  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2885,7 +2885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2908,7 +2908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2943,7 +2943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2966,7 +2966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2986,7 +2986,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3004,7 +3004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3034,7 +3034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3203,7 +3203,7 @@
        "24515                  [K/Kevin Parent Les Doigts 2.mid]  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3231,7 +3231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3386,7 +3386,7 @@
        "15472   [W/whiteroom__someday_intro__ambia.mid, W/Whit...  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3406,7 +3406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3428,7 +3428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3597,7 +3597,7 @@
        "44034   [Schumann/Schuman Toccata op7.mid, Schumann/Sc...  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3615,7 +3615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3643,7 +3643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3672,7 +3672,7 @@
        "Name: instrument_names, dtype: int64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3690,7 +3690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3757,7 +3757,7 @@
        "Name: original_files, dtype: int64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3788,7 +3788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4079,7 +4079,7 @@
        "[153 rows x 12 columns]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4112,7 +4112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4416,7 +4416,7 @@
        "[97848 rows x 12 columns]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4433,7 +4433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4442,7 +4442,7 @@
        "0.5479696014247232"
       ]
      },
-     "execution_count": 51,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4495,8 +4495,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
