add downmix via matrix examples

--- a/00_basics/sc_dimensions.ipynb
+++ b/00_basics/sc_dimensions.ipynb
@@ -558,29 +558,29 @@
      "text": [
       "ERROR: Message 'at' not understood.\n",
       "RECEIVER:\n",
-      "Instance of Set {    (0x7ff488b78598, gc=C0, fmt=00, flg=00, set=02)\n",
+      "Instance of Set {    (0x7ff1a052d478, gc=D8, fmt=00, flg=00, set=02)\n",
       "  instance variables [2]\n",
-      "    array : instance of Array (0x7ff47102d598, size=8, set=3)\n",
+      "    array : instance of Array (0x7ff210022858, size=8, set=3)\n",
       "    size : Integer 3\n",
       "}\n",
       "ARGS:\n",
       "   Integer 0\n",
       "\n",
       "PROTECTED CALL STACK:\n",
-      "\tMeta_MethodError:new\t0x7ff460514080\n",
+      "\tMeta_MethodError:new\t0x7ff1e02c5100\n",
       "\t\targ this = DoesNotUnderstandError\n",
       "\t\targ what = nil\n",
       "\t\targ receiver = Set[ 3, 2, 1 ]\n",
-      "\tMeta_DoesNotUnderstandError:new\t0x7ff460516040\n",
+      "\tMeta_DoesNotUnderstandError:new\t0x7ff1e02c70c0\n",
       "\t\targ this = DoesNotUnderstandError\n",
       "\t\targ receiver = Set[ 3, 2, 1 ]\n",
       "\t\targ selector = at\n",
       "\t\targ args = [ 0 ]\n",
-      "\tObject:doesNotUnderstand\t0x7ff48810b200\n",
+      "\tObject:doesNotUnderstand\t0x7ff1f00ba5c0\n",
       "\t\targ this = Set[ 3, 2, 1 ]\n",
       "\t\targ selector = at\n",
       "\t\targ args = nil\n",
-      "\ta FunctionDef\t0x7ff470edbf08\n",
+      "\ta FunctionDef\t0x7ff1a0329fd8\n",
       "\t\tsourceCode = \"{ var result; \\\"**** JUPYTER ****\\\".postln; result = {a[0]}.value(); postf(\\\"-> %\n",
       "\\\", result); \\\"\\\".postln;}\"\n"
      ]
@@ -624,6 +624,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a2fdb5f5-9a5c-4cbd-b55f-9d3607b226e3",
+   "metadata": {},
+   "source": [
+    "Lets take a look at the formula \n",
+    "\n",
+    "$$\n",
+    "\\underbrace{\\begin{pmatrix}\n",
+    "    1 & 1 & 1 \\\\\n",
+    "    1 & 1 & 3 \\\\\n",
+    "\\end{pmatrix}}_{A}\n",
+    "\\underbrace{\\begin{pmatrix}\n",
+    "    2\\\\\n",
+    "    1\\\\\n",
+    "    1\\\\\n",
+    "\\end{pmatrix}}_{B}\n",
+    "\\overset{!}{=}\n",
+    "\\underbrace{\\begin{pmatrix}\n",
+    "    4 \\\\\n",
+    "    6 \n",
+    "\\end{pmatrix}}_{C}\n",
+    "$$\n",
+    "\n",
+    "$A$ is a $2 \\times 3$ matrix and $B$ a $3 \\times 1$ matrix, so the resulting matrix $C$ must be a $2 \\times 1$ matrix.\n",
+    "The values can easily be verified if we take a look at the definition of matrix multiplication"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "id": "atomic-criticism",
@@ -649,8 +677,9 @@
    "id": "higher-michigan",
    "metadata": {},
    "source": [
-    "We want to use this function to calculate downmixes.\n",
+    "We see that our function works as intended - although for a proper validation of this we cannot work with examples but need to examine the code.\n",
     "\n",
+    "We now want to use this function to calculate downmixes in SuperCollider.\n",
     "To do this we first need to start the server."
    ]
   },
@@ -669,7 +698,38 @@
     }
    ],
    "source": [
-    "s.boot;"
+    "s.boot();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e449612-8fa3-4378-9dc9-8aac94c65690",
+   "metadata": {},
+   "source": [
+    "Lets formalise what we want to do before we start coding it.\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "A &= \\begin{pmatrix}\n",
+    "    X_{1, 1} & X_{1, 2} & X_{1,3} & X_{1, 4} \\\\\n",
+    "    X_{2, 1} & X_{2, 2} & X_{2, 3} & X_{2, 4}\n",
+    "\\end{pmatrix}\n",
+    "\\text{where } \\{ X_{i, j} \\sim \\mathcal{U}(0, 1) | i \\in \\{1,\\dots,2\\}, j \\in \\{1, \\dots 4 \\}  \\}\\\\\n",
+    "B &= \\begin{pmatrix}\n",
+    "   \\text{SinOsc}_{400} \\\\\n",
+    "   \\text{Saw}_{45} \\\\\n",
+    "   \\text{Pulse}_{8000} \\\\\n",
+    "   \\text{Blip}_{3} \\\\\n",
+    "\\end{pmatrix} \\\\\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "where $\\mathcal{U}$ is the [Continuous uniform distribution](https://en.wikipedia.org/wiki/Continuous_uniform_distribution).\n",
+    "\n",
+    "$A$ is a $2 \\times 4$ matrix with random values between $0$ and $1$ and our signals are stored in matrix $B$ as a $4 \\times 1$ array of Ugens.\n",
+    "So $C = A B$ results in a $2 \\times 1$ matrix - so a mixed down stereo signal.\n",
+    "\n",
+    "If we would like to have a mix with $m$ chanels, we would need to modify $A$ to a $m \\times 4$ matrix."
    ]
   },
   {
@@ -682,6 +742,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Mixing Matrix A [ [ 0.38767051696777, 0.12795674800873, 0.51681995391846, 0.76382398605347 ], [ 0.45636820793152, 0.66525650024414, 0.13446116447449, 0.029584407806396 ] ]\n",
+      "A shape [ 2, 4 ]\n",
+      "B shape [ 4 ]\n",
+      "Mixdown shape: [ 2 ]\n",
       "-> Ndef('x')"
      ]
     }
@@ -699,27 +763,22 @@
     "            dur: 1/8\n",
     "        )\n",
     "    };\n",
-    "\n",
-    "    a = [\n",
-    "        [SinOsc.ar(freq: [440, 226, 782]) * gater.value],\n",
-    "        [Saw.ar(freq: [45, 881, 9000]) * gater.value],\n",
-    "        [Pulse.ar(freq: [8000, 1000, 500]) * gater.value],\n",
-    "        [Blip.ar(freq: [3, 8, 20], numharm: 140) * gater.value],\n",
+    "    \n",
+    "    a = { [1.0, 1.0, 1.0, 1.0].rand } ! 2;\n",
+    "    b = [\n",
+    "        SinOsc.ar(freq: 400) * gater.value,\n",
+    "        Saw.ar(freq: 45) * gater.value,\n",
+    "        Pulse.ar(freq: 8000) * gater.value,\n",
+    "        Blip.ar(freq: 3, numharm: 140) * gater.value,\n",
     "    ];\n",
+    "    \"Mixing Matrix A %\".format(a).postln;\n",
+    "    \"A shape %\".format(a.shape).postln;\n",
+    "    \"B shape %\".format(b.shape).postln;\n",
     "\n",
     "    // calculate a mixdown\n",
-    "    b = { [1.0, 1.0, 1.0, 1.0].rand } ! 1;\n",
-    "    //b = { LFNoise1.kr(1 ! 3).max(0) } ! 8;\n",
     "    mix = ~matrixMul.(a, b);\n",
-    "    \n",
-    "    // flip through the signals\n",
-    "    selected = SelectX.ar(\n",
-    "        which: MouseX.kr(0, 7).round.lag, \n",
-    "        array: mix\n",
-    "    );\n",
-    "    \n",
-    "    // each row is three-channel, mix to stereo\n",
-    "    Splay.ar(inArray: selected) * 0.1\n",
+    "    \"Mixdown shape: %\".format(mix.shape).postln;\n",
+    "    mix*0.2;\n",
     "}).play;"
    ]
   },
@@ -735,6 +794,238 @@
    "cell_type": "code",
    "execution_count": 25,
    "id": "aboriginal-roots",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-> CmdPeriod"
+     ]
+    }
+   ],
+   "source": [
+    "."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "429b1dc2-2485-4474-9787-865c8d9a5830",
+   "metadata": {},
+   "source": [
+    "We can spin this example further by adding additional row vectors to our Synth matrix *B*, so\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "A &= \\begin{pmatrix}\n",
+    "    X_{1, 1} & X_{1, 2} & X_{1,3} & X_{1, 4} \\\\\n",
+    "    X_{2, 1} & X_{2, 2} & X_{2, 3} & X_{2, 4}\n",
+    "\\end{pmatrix}\n",
+    "\\text{where } \\{ X_{i, j} \\sim \\mathcal{U}(0, 1) | i \\in \\{1,\\dots,2\\}, j \\in \\{1, \\dots 4 \\}  \\}\\\\\n",
+    "B &= \\begin{pmatrix}\n",
+    "   \\text{SinOsc}_{440} & \\text{SinOsc}_{226} & \\text{SinOsc}_{782} \\\\\n",
+    "   \\text{Saw}_{45} & \\text{Saw}_{200} & \\text{Saw}_{420} \\\\\n",
+    "   \\text{Pulse}_{300} & \\text{Pulse}_{200} & \\text{Pulse}_{100} \\\\\n",
+    "   \\text{Blip}_{3} & \\text{Blip}_{5} & \\text{Blip}_{2}  \\\\\n",
+    "\\end{pmatrix} \\\\\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "The problem is that now the operation $AB$ returns a $2 \\times 3$ matrix which do not fit most representations of speakers.\n",
+    "\n",
+    "But we can solve this problem by multipling a $3 \\times 1$ matrix $D$ with uniform distributed values as in A so we obtain a $2\\times1$ matrix $C$ by calculating $C = (AB)D$.\n",
+    "\n",
+    "$$\n",
+    "D = \\begin{pmatrix}\n",
+    "    X_{1, 1} \\\\\n",
+    "    X_{2, 1} \\\\\n",
+    "    X_{3, 1}\n",
+    "\\end{pmatrix}\n",
+    "\\text{where } \\{ X_{i, 1} \\sim \\mathcal{U}(0, 1) | i \\in \\{1,\\dots,3\\} \\}  \\}\n",
+    "$$\n",
+    "\n",
+    "We see that working with matrices really comes in handy once we start to think in matrices."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "4fd1f27c-3798-4bcb-9f84-4763d974f2a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A shape [ 2, 4 ]\n",
+      "B shape [ 4, 3 ]\n",
+      "D shape [ 3, 1 ]\n",
+      "Mixdown shape: [ 2, 1 ]\n",
+      "-> Ndef('x')"
+     ]
+    }
+   ],
+   "source": [
+    "Ndef(\\x, {\n",
+    "    var a, b, mix, selected, gater;\n",
+    "\n",
+    "    gater = {\n",
+    "        Trig1.kr(\n",
+    "            in: PulseDivider.kr(\n",
+    "                trig: Impulse.kr(8), \n",
+    "                div: IRand(4, 9),\n",
+    "                start: IRand(0, 8)),\n",
+    "            dur: 1/8\n",
+    "        )\n",
+    "    };\n",
+    "    \n",
+    "    a = { [1.0, 1.0, 1.0, 1.0].rand } ! 2;\n",
+    "    b = [\n",
+    "        SinOsc.ar(freq: [440, 226, 782]) * gater.value,\n",
+    "        Saw.ar(freq: [45, 200, 420]) * gater.value,\n",
+    "        Pulse.ar(freq: [300, 200, 100]) * gater.value,\n",
+    "        Blip.ar(freq: [3, 5, 2], numharm: 140) * gater.value,\n",
+    "    ];\n",
+    "    d = { [1.0].rand } ! 3;\n",
+    "    \"A shape %\".format(a.shape).postln;\n",
+    "    \"B shape %\".format(b.shape).postln;\n",
+    "    \"D shape %\".format(d.shape).postln;\n",
+    "\n",
+    "    // calculate a mixdown\n",
+    "    mix = ~matrixMul.(~matrixMul.(a, b), d);\n",
+    "    \"Mixdown shape: %\".format(mix.shape).postln;\n",
+    "    mix*0.2;\n",
+    "}).play;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "bf5e2f04-abc4-47cc-b4a6-f372aa318171",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-> CmdPeriod"
+     ]
+    }
+   ],
+   "source": [
+    "."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56909aab-ac51-46bc-ac13-382a3241c263",
+   "metadata": {},
+   "source": [
+    "Lets develop this a bit further.\n",
+    "\n",
+    "Lets define a $10\\times5$ signal matrix $S$ - we want to use the cursor to distribute the matrix across the screen and use the cursor to smoothly transit between each signal of our matrix.\n",
+    "\n",
+    "As we want to result in a $2\\times1$ stereo mix $C$ we know thanks to the dimension rules of matrix multiplicaton that we need\n",
+    "\n",
+    "$$\n",
+    "C = \\underbrace{\\underbrace{(\\underbrace{A}_{2 \\times 10} \\underbrace{S}_{10 \\times 5})}_{2 \\times 5} \\underbrace{B}_{5 \\times 1}}_{2 \\times 1}\n",
+    "$$\n",
+    "\n",
+    "The $2 \\times 10$ matrix controls the volume of the rows, where the $5 \\times 1$ matrix controls the volume of the columns.\n",
+    "\n",
+    "As we gradualy want to have a transition between the signals that are close to each other, we have to think about a way how to determine the volume of each signal based on the position of the cursor.\n",
+    "The problem is that we cannot solve this with a purely linear function as we need an increasing slope and an decreasing slope (if we approach a point it should go louder but if we pass the point it should go quiter again).\n",
+    "But we can combine two linear functions to mimic this behaviour by combining an increasing and a decreasing linear function and taking the lowest value of each while they intersect at the $i$-th fraction with an co-domain value of 1 (so $y=1$).\n",
+    "\n",
+    "With some basic calculus we can come up with two simple linear functions which have for $f_i$ which have\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "    f_{\\text{up}_i}(x) &= ax + (2-i) \\\\\n",
+    "    f_{\\text{down}_i}(x) &= -ax + i \\\\\n",
+    "    f_{\\text{combined}_i}(x) &= \\max \\left( \\min \\left( f_{\\text{up}_i}(x) , f_{\\text{down}_i} (x) \\right) , 0 \\right)\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "where $a$ is the number of distinct, even distributed points we want to separate and $i$ is the $i$-th point we want to separate ($i$ starts counting at 1).\n",
+    "We combine both functions by taking the lower of both functions, but also add a $\\max$ function to not go below 0.\n",
+    "\n",
+    "In our case the $x$ of our function is the position of the cursor on the screen.\n",
+    "\n",
+    "Note that by multiplying a factor to $a$ we could in- or decresase the separation of our signals in the mix."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "e74f9d39-f902-4b65-911f-a25c6e383a27",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of A: [ 2, 10 ]\n",
+      "Shape of S: [ 10, 5 ]\n",
+      "Shape of B: [ 5, 1 ]\n",
+      "Shape of C: [ 2, 1 ]\n",
+      "-> Ndef('x')"
+     ]
+    }
+   ],
+   "source": [
+    "Ndef(\\x, {\n",
+    "    var mix, s, a, b, allRatios, numRatios=10, numSines=5, baseFreq=200, numOutChannels=2;\n",
+    "    \n",
+    "    // array of numRatios rows, each with numSine sine tones in a series\n",
+    "    allRatios = [1.2, 1.25, 1.5, pi/2, 5/4, 7/4, 9/4, 11/4, pi, 13/4][0..numRatios];\n",
+    "    s = allRatios.collect { |ratio| \n",
+    "        numSines.collect { |i|\n",
+    "            var freq = baseFreq * (ratio ** i);\n",
+    "            SinOsc.ar(freq: freq) * AmpComp.kr(freq: freq, root: baseFreq)\n",
+    "        } * LFNoise2.ar(freq: 70).max(0)\n",
+    "    };\n",
+    "    \n",
+    "    // in SC indices start at 0 so we write i+1 and j+1 here\n",
+    "    a = numOutChannels.collect({|i|\n",
+    "        numRatios.collect({|j|\n",
+    "            // to make it more interesting we offset the i-th channel by i\n",
+    "            max(\n",
+    "                min(\n",
+    "                    numRatios*MouseY.kr+ (2-(j+1+i)),\n",
+    "                    (-1)*numRatios*MouseY.kr + (j+1+i),\n",
+    "                ),\n",
+    "            0)\n",
+    "        })\n",
+    "    });\n",
+    "    b = numSines.collect({|i|\n",
+    "        1.collect({\n",
+    "            max(\n",
+    "                min(\n",
+    "                    numSines*MouseX.kr+ (2-(i+1)),\n",
+    "                    (-1)*numSines*MouseX.kr + (i+1),\n",
+    "                ),\n",
+    "            0) \n",
+    "        })\n",
+    "    });\n",
+    "    \n",
+    "    mix = ~matrixMul.(~matrixMul.(a, s), b);\n",
+    "    \n",
+    "    \"Shape of A: %\".format(a.shape).postln;\n",
+    "    \"Shape of S: %\".format(s.shape).postln;\n",
+    "    \"Shape of B: %\".format(b.shape).postln;\n",
+    "    \"Shape of C: %\".format(mix.shape).postln;\n",
+    "    \n",
+    "    mix*0.3;\n",
+    "}).play;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "1f7bc1a0-92d4-474b-b420-ebbf729dcc97",
    "metadata": {},
    "outputs": [
     {
