--- a/00_basics/sc_dimensions.ipynb
+++ b/00_basics/sc_dimensions.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Dimensionality in SuperCollider\n",
     "\n",
-    "After we took a look at the math perspective of vectors and matrices we now want to shift and expand our view on the topic by taking a look at how to create and interact with vectors and matrices in SuperCollider."
+    "After we have taken a look at the math perspective of vectors and matrices we now want to shift and expand our view on the topic by taking a look at how to create and interact with vectors and matrices in SuperCollider."
    ]
   },
   {
@@ -82,7 +82,7 @@
    "id": "native-mathematics",
    "metadata": {},
    "source": [
-    "When working with rational numbers we must take into accont that a computer is [bound to a limited representation of our number](https://en.wikipedia.org/wiki/Single-precision_floating-point_format) which leads sometimes to unexpected results."
+    "When working with rational numbers we must take into account that a computer is [bound to a limited representation of our number](https://en.wikipedia.org/wiki/Single-precision_floating-point_format) which leads sometimes to unexpected results."
    ]
   },
   {
@@ -111,7 +111,7 @@
    "id": "understood-password",
    "metadata": {},
    "source": [
-    "Althogh $\\left \\lfloor \\frac{0.7}{0.1} \\right \\rfloor = \\lfloor 7 \\rfloor = 7$, where $\\lfloor x \\rfloor$ is the [flooring](https://en.wikipedia.org/wiki/Floor_and_ceiling_functions) operator on the variable $x$, SuperCollider decides to return a 6 instead which is caused by the limited floating point precission."
+    "Althogh $\\left \\lfloor \\frac{0.7}{0.1} \\right \\rfloor = \\lfloor 7 \\rfloor = 7$, where $\\lfloor x \\rfloor$ is the [flooring](https://en.wikipedia.org/wiki/Floor_and_ceiling_functions) operator on the variable $x$, SuperCollider decides to return a 6 instead which is caused by the limited floating point precision."
    ]
   },
   {
@@ -245,7 +245,7 @@
    "id": "excited-california",
    "metadata": {},
    "source": [
-    "A bit unexpecting that we do not receive an error - SuperCollider expands arrays in such operations to the longest array and cycles through the shorter ones. This allows for very concise code, but you have to take care about the input arrays yourself.\n",
+    "A bit unexpected that we do not receive an error - SuperCollider expands arrays in such operations to the longest array and cycles through the shorter ones. This allows for very concise code, but you have to take care about the input arrays yourself.\n",
     "Lets see how this cascades when we want to multiply 3 arrays with different size."
    ]
   },
@@ -320,9 +320,9 @@
    "id": "desirable-platform",
    "metadata": {},
    "source": [
-    "So it is basically just an array of arrays - but lets take a closer look at this as it is important to get the indices and the dimensions properly when working with matrices.\n",
+    "So it is basically just an array of arrays - but let's take a closer look at this as it is important to get the indices and the dimensions properly when working with matrices.\n",
     "\n",
-    "Lets say we want to represent a $3 \\times 2$ matrix \n",
+    "Let's say we want to represent a $3 \\times 2$ matrix \n",
     "$$\n",
     "\\text{M} =\n",
     "\\begin{pmatrix}\n",
@@ -363,7 +363,7 @@
    "id": "determined-metadata",
    "metadata": {},
    "source": [
-    "We see that the first dimension in a SuperCollider array are the rows, the 2nd dimension (the content of the arrays) are the columns - this fits nicely with our mathematical notation.\n",
+    "We interpret the first dimension as rows, the second dimension (the elements of the arrays) as columns. This fits nicely with our mathematical notation.\n",
     "\n",
     "So lets try common operations such as the scaling of a matrix with a scalar."
    ]
@@ -729,7 +729,7 @@
     "$A$ is a $2 \\times 4$ matrix with random values between $0$ and $1$ and our signals are stored in matrix $B$ as a $4 \\times 1$ array of Ugens.\n",
     "So $C = A B$ results in a $2 \\times 1$ matrix - so a mixed down stereo signal.\n",
     "\n",
-    "If we would like to have a mix with $m$ chanels, we would need to modify $A$ to a $m \\times 4$ matrix."
+    "If we would like to have a mix with $m$ channels, we would need to modify $A$ to a $m \\times 4$ matrix."
    ]
   },
   {
@@ -835,7 +835,7 @@
     "\n",
     "The problem is that now the operation $AB$ returns a $2 \\times 3$ matrix which do not fit most representations of speakers.\n",
     "\n",
-    "But we can solve this problem by multipling a $3 \\times 1$ matrix $D$ with uniform distributed values as in A so we obtain a $2\\times1$ matrix $C$ by calculating $C = (AB)D$.\n",
+    "But we can solve this problem by multiplying a $3 \\times 1$ matrix $D$ with uniform distributed values as in A so we obtain a $2\\times1$ matrix $C$ by calculating $C = (AB)D$.\n",
     "\n",
     "$$\n",
     "D = \\begin{pmatrix}\n",
@@ -927,7 +927,7 @@
     "\n",
     "Lets define a $10\\times5$ signal matrix $S$ - we want to use the cursor to distribute the matrix across the screen and use the cursor to smoothly transit between each signal of our matrix.\n",
     "\n",
-    "As we want to result in a $2\\times1$ stereo mix $C$ we know thanks to the dimension rules of matrix multiplicaton that we need\n",
+    "As we want to result in a $2\\times1$ stereo mix $C$ we know thanks to the dimension rules of matrix multiplication that we need\n",
     "\n",
     "$$\n",
     "C = \\underbrace{\\underbrace{(\\underbrace{A}_{2 \\times 10} \\underbrace{S}_{10 \\times 5})}_{2 \\times 5} \\underbrace{B}_{5 \\times 1}}_{2 \\times 1}\n",
@@ -935,9 +935,9 @@
     "\n",
     "The $2 \\times 10$ matrix controls the volume of the rows, where the $5 \\times 1$ matrix controls the volume of the columns.\n",
     "\n",
-    "As we gradualy want to have a transition between the signals that are close to each other, we have to think about a way how to determine the volume of each signal based on the position of the cursor.\n",
-    "The problem is that we cannot solve this with a purely linear function as we need an increasing slope and an decreasing slope (if we approach a point it should go louder but if we pass the point it should go quiter again).\n",
-    "But we can combine two linear functions to mimic this behaviour by combining an increasing and a decreasing linear function and taking the lowest value of each while they intersect at the $i$-th fraction with an co-domain value of 1 (so $y=1$).\n",
+    "As we gradually want to have a transition between the signals that are close to each other, we have to think about a way how to determine the volume of each signal based on the position of the cursor.\n",
+    "The problem is that we cannot solve this with a purely linear function as we need an increasing slope and an decreasing slope (if we approach a point it should go louder but if we pass the point it should go quieter again).\n",
+    "But we can combine two linear functions to mimic this behavior by combining an increasing and a decreasing linear function and taking the lowest value of each while they intersect at the $i$-th fraction with an co-domain value of 1 (so $y=1$).\n",
     "\n",
     "With some basic calculus we can come up with two simple linear functions which have for $f_i$ which have\n",
     "\n",
@@ -954,7 +954,7 @@
     "\n",
     "In our case the $x$ of our function is the position of the cursor on the screen.\n",
     "\n",
-    "Note that by multiplying a factor to $a$ we could in- or decresase the separation of our signals in the mix."
+    "Note that by multiplying a factor to $a$ we could in- or decrease the separation of our signals in the mix."
    ]
   },
   {
